Latest(Reservation Done)

--- a/src/app/application/layout/header/header.html
+++ b/src/app/application/layout/header/header.html
@@ -1,12 +1,11 @@
 <div class="card">
-  <p-menubar class="border-noround border-none">
+  <p-menubar>
     <ng-template #start>
-      <!-- Burger Menu - Mobile only with BOLD WHITE icon -->
       <p-button 
         class="burger-btn"
-        [icon]="'pi pi-bars'" 
-        [severity]="'secondary'" 
-        [variant]="'text'" 
+        icon="pi pi-bars" 
+        severity="secondary" 
+        variant="text" 
         [rounded]="true"
         (click)="toggleSidebar()">
       </p-button>
@@ -15,33 +14,22 @@
     <ng-template #item let-item let-root="root"></ng-template>
     
     <ng-template #end>
-      <div class="user-header">
-        <!-- Theme Toggle -->
-        <p-button 
-          [icon]="'pi pi-sun'" 
-          [severity]="'secondary'" 
-          [variant]="'text'" 
-          [rounded]="true"
-          (click)="toggleTheme(true)">
-        </p-button>
-        
-        <!-- User Info Section -->
+      <div class="user-header">        
         <div class="user-info">
           <div class="user-details">
             <span class="user-name">{{ userName }}</span>
             <span class="user-email">{{ email }}</span>
           </div>
           <p-avatar shape="circle" size="large">
-            <img [src]="photoUrl" alt="User Photo" />
+            <img [src]="photoUrl" alt="User Photo">
           </p-avatar>
         </div>
         
-        <!-- Logout Button -->
         <p-button 
           label="Logout"
           icon="pi pi-arrow-right"
           iconPos="right"
-          [severity]="'danger'"
+          severity="danger"
           [outlined]="true"
           [rounded]="true"
           (click)="onLogoutClick()">
@@ -51,5 +39,5 @@
   </p-menubar>
 </div>
 
-<p-confirmDialog [style]="{ width: '450px' }" />
-<p-toast />
+<p-confirmDialog [style]="{ width: '450px' }"></p-confirmDialog>
+<p-toast></p-toast>
