--- a/src/app/application/customer/customer.scss
+++ b/src/app/application/customer/customer.scss
@@ -164,6 +164,10 @@ $border-color: rgba(255, 255, 255, 0.08);
     }
   }
 
+  .content-wrapper{
+    padding: 1.5rem 2rem 1.5rem;
+  }
+
   .p-dialog-content {
     background: transparent;
     padding: 1.5rem;
